# rlens

./: .gitignore  README.md  RELEASING.md  THIRD_PARTY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  classic_control.yaml  lunarlander.yaml  lunarlander_results.md  results.md
configs/: bench.yaml  ppo_cartpole.yaml
rlens/: __init__.py  cli.py  trainer.py
rlens/algos/: base.py  dqn.py  ppo.py  sac.py
rlens/core/: buffers.py  device.py  env.py  networks.py  seeding.py
rlens/dashboard/: server.py
rlens/dashboard/static/: app.js  index.html
rlens/experiment/: bench.py  checkpoint.py  config.py  eval.py  overrides.py  report.py  run.py
rlens/telemetry/: frames.py  grads.py  recorder.py  store.py
scripts/: make_dashboard_shot.sh  make_demo_gif.py
tests/: test_best_policy.py  test_buffers.py  test_checkpoint.py  test_dashboard_api.py  test_eval.py  test_image_obs.py  test_inspector.py  test_lr_anneal.py  test_offpolicy_smoke.py  test_offpolicy_speed.py  test_overrides.py  test_ppo_smoke.py  test_report.py  test_telemetry.py
